tests/invalid_submodules/exported_unify3.err_exp2
Mercury/int0s/exported_unify3.int0:004: In clause for unification predicate for
Mercury/int0s/exported_unify3.int0:004:   type `foo':
Mercury/int0s/exported_unify3.int0:004:   error: call to [38;5;203mundefined[39;49m predicate
Mercury/int0s/exported_unify3.int0:004:   [38;5;87m`exported_unify3.defined_in_wrong_module'/2.[39;49m
Mercury/ints/exported_unify3.sub.int:003: In clause for unification predicate
Mercury/ints/exported_unify3.sub.int:003:   for type `bar':
Mercury/ints/exported_unify3.sub.int:003:   error: call to [38;5;203mundefined[39;49m predicate
Mercury/ints/exported_unify3.sub.int:003:   [38;5;87m`exported_unify3.sub.not_exported'/2.[39;49m
exported_unify3.m:009: In clause for unification predicate for type `foo':
exported_unify3.m:009:   error: call to [38;5;203mundefined[39;49m predicate
exported_unify3.m:009:   [38;5;87m`exported_unify3.defined_in_wrong_module'/2.[39;49m
